--- a/StorhaugenWebsite/Components/ActivityFeed.razor
+++ b/StorhaugenWebsite/Components/ActivityFeed.razor
@@ -23,7 +23,7 @@
             <MudText Typo="Typo.body2" Color="Color.Secondary">
                 Legg til venner for å se hva de lager!
             </MudText>
-            <MudButton Variant="Variant.Outlined" Color="Color.Primary" Href="/friends" Class="mt-3">
+            <MudButton Variant="Variant.Outlined" Color="Color.Primary" Href="friends" Class="mt-3">
                 Finn venner
             </MudButton>
         </div>
