--- a/StorhaugenWebsite/Components/MyRecipes.razor
+++ b/StorhaugenWebsite/Components/MyRecipes.razor
@@ -257,7 +257,7 @@
 
     private void NavigateToRecipe(UserRecipeDto recipe)
     {
-        Navigation.NavigateTo($"/food/{recipe.Id}");
+        Navigation.NavigateTo($"food/{recipe.Id}");
     }
 
     private async Task PublishRecipe(UserRecipeDto recipe)
