--- a/StorhaugenWebsite/Pages/Collections.razor
+++ b/StorhaugenWebsite/Pages/Collections.razor
@@ -216,7 +216,7 @@ else
 
     private void OpenCollection(Guid id)
     {
-        Navigation.NavigateTo($"/collections/{id}");
+        Navigation.NavigateTo($"collections/{id}");
     }
 
     private string GetVisibilityIcon(string visibility) => visibility switch
