--- a/StorhaugenWebsite/Pages/FoodDetails.razor
+++ b/StorhaugenWebsite/Pages/FoodDetails.razor
@@ -38,7 +38,7 @@ else if (_recipe == null)
         <p class="empty-state-text">
             Denne oppskriften er enten slettet, eller du har mistet tilgangen til den.
         </p>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="/">
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="">
             Tilbake til start
         </MudButton>
     </div>
