--- a/StorhaugenWebsite/Pages/Settings.razor
+++ b/StorhaugenWebsite/Pages/Settings.razor
@@ -106,7 +106,7 @@
                        Color="Color.Primary"
                        Size="Size.Small"
                        StartIcon="@Icons.Material.Rounded.Settings"
-                       Href="/collections">
+                       Href="collections">
                 Administrer
             </MudButton>
         </div>
